[gd_scene load_steps=9 format=3 uid="uid://b4j13io34hy5x"]

[ext_resource type="Script" uid="uid://btjp8pttcrsnn" path="res://scripts/cursor.gd" id="1_ndevg"]
[ext_resource type="Texture2D" uid="uid://gbn70djm1kpw" path="res://resources/shop_items/cooper_pickaxe/copper_pickaxe.png" id="1_s0nli"]
[ext_resource type="AudioStream" uid="uid://d4fc8bigc1eve" path="res://assets/audio/sounds/pickaxe_swing.wav" id="4_n5qf0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]

[sub_resource type="Animation" id="Animation_pey64"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorArea/CursorSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n5qf0"]
resource_name = "click_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorArea/CursorSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.785398]
}

[sub_resource type="Animation" id="Animation_xjntw"]
resource_name = "click_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CursorArea/CursorSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xl2q8"]
_data = {
&"RESET": SubResource("Animation_pey64"),
&"click_left": SubResource("Animation_n5qf0"),
&"click_right": SubResource("Animation_xjntw")
}

[node name="Cursor" type="Node2D"]
z_index = 9
scale = Vector2(1.5, 1.5)
script = ExtResource("1_ndevg")

[node name="CursorArea" type="Area2D" parent="."]

[node name="CursorSprite" type="Sprite2D" parent="CursorArea"]
texture = ExtResource("1_s0nli")

[node name="CursorCollider" type="CollisionShape2D" parent="CursorArea"]
scale = Vector2(1.8, 1.8)
shape = SubResource("RectangleShape2D_u5sy4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xl2q8")
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n5qf0")
bus = &"Sound"

[connection signal="update_pickaxe" from="." to="." method="_on_update_pickaxe"]
